--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
 	<distributionManagement>
 	    <repository>
         	<id>nexus</id>
-		<url>http://35.224.11.111:8080/repository/developer-repo/</url>
+		<url>http://34.136.2.190:8080/repository/invias/</url>
 	    </repository>
 	</distributionManagement>
 </project>
