--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 spring.application.name: microservice-greetings
 spring.metrics.prometheus.enabled: true
+logging.level.org.springframework.web: DEBUG
