--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,12 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+	  <!--repositories>
+	    <repository>
+	      <id>my-internal-site</id>
+	      <url>http://localhost:8081/repository/abcedf</url>
+	    </repository>
+	  </repositories-->
 	  <repositories>
 	    <repository>
 	      <id>my-internal-site</id>
